@@ -355,6 +355,6 @@ public class GVNestedAndTreeVisibilityTests extends AbstractIntegrationTests {
                 .then(showContentAsTreeTool)
                 .consumeNextWith(updatedDiagramContentConsumer2)
                 .thenCancel()
-                .verify(Duration.ofSeconds(100));
+                .verify(Duration.ofSeconds(10));
     }
 }
